descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-05-XX  Release 7.16.10                                    ---
----------------------------------------------------------------------

* added manual page for 'random' number generator tool - Sean Morrison
* added Tktable 2.10 external dependency for archer - Cliff Yapp
* fixed heap corruption writing NURBS sketch objects - Östen Lundahl
* added fullscreen display mode via F5 keybinding to ISST - Cliff Yapp
* restored archer view commands to work without a .g file - Bob Parker
* fixed memory leak in ISST during window resizing - Erik Greenwald
* fixed running multiple framebuffer servers concurrently - Bob Parker
* improvements to the primitive creation menu in archer - Bob Parker
* fixed crash using bot_split on non-"plate mode" BoTs - Bob Parker
* improved NURBS curve evaluation for mged brep command - Keith Bowman
* fixed OpenGL framebuffer Mac refresh bug - Sean Morrison, Bob Parker
* improved archer object list view - Bob Parker


----------------------------------------------------------------------
--- 2010-04-28  Release 7.16.8                                     ---
----------------------------------------------------------------------

BRL-CAD's ray tracing support for NURBS boundary representation
geometry objects continues to be developed towards providing a robust
foundation for supporting multiple-representation geometry.  This
release includes several NURBS ray tracing bug fixes, robustness
improvements, and trimming enhancements.

MGED receives a lot of attention towards improved stability with
numerous troublesome bugs getting fixed (e.g., "the Mac input bug"),
restoration of behavior for various introspective commands, and
continued feature integration with Archer.  MGED's wireframe display